--- a/arch/arm/boot/dts/qcom/msm8939-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-regulator.dtsi
@@ -178,6 +178,10 @@
 			<2          2          1 0xffffffff 0xffffffff 0xffffffff>,
 			<2          2          2 0xffffffff 0xffffffff 0xffffffff>,
 			<2          2          3 0xffffffff 0xffffffff 0xffffffff>,
+			<5          6          0 0xffffffff 0xffffffff 0xffffffff>,
+			<5          6          1 0xffffffff 0xffffffff 0xffffffff>,
+			<5          6          2 0xffffffff 0xffffffff 0xffffffff>,
+			<5          6          3 0xffffffff 0xffffffff 0xffffffff>,
 			<0xffffffff 0xffffffff 0 0xffffffff 0xffffffff 0xffffffff>,
 			<0xffffffff 0xffffffff 1 0xffffffff 0xffffffff 0xffffffff>,
 			<0xffffffff 0xffffffff 2 0xffffffff 0xffffffff 0xffffffff>,
@@ -187,8 +191,12 @@
 					<0   20000  0>,
 					<0   50000  0>,
 					<0   20000  0>,
+					<0   50000  0>,
 					<0   20000  0>,
-					<0 (-10000) 0>,
+					<0   50000  0>,
+					<0   20000  0>,
+					<0   50000  0>,
+					<0   20000  0>,
 					<0   50000  0>,
 					<0   20000  0>,
 					<0   50000  0>,
@@ -204,6 +212,10 @@
 					<0 (-20) (-124)>, /* NOM - 10mv, TURBO - 60mv	*/
 					<0  104  (-124)>, /* NOM + 50mv, TURBO - 60mv	*/
 					<0   41  (-124)>, /* NOM + 20mv, TURBO - 60mv	*/
+					<0   41   (-41)>, /* NOM + 20mv, TURBO - 20mv	*/
+					<0 (-20)  (-41)>, /* NOM - 10mv, TURBO - 20mv	*/
+					<0  104   (-41)>, /* NOM + 50mv, TURBO - 20mv	*/
+					<0   41   (-41)>, /* NOM + 20mv, TURBO - 20mv	*/
 					<0  104   (-41)>, /* NOM + 50mv, TURBO - 20mv	*/
 					<0   41   (-41)>, /* NOM + 20mv, TURBO - 20mv	*/
 					<0  104   (-41)>, /* NOM + 50mv, TURBO - 20mv	*/
@@ -218,6 +230,10 @@
 					<0 0 62>,
 					<0 0 62>,
 					<0 0 62>,
+					<0 0 40>,
+					<0 0 40>,
+					<0 0 40>,
+					<0 0 40>,
 					<0 0 40>,
 					<0 0 40>,
 					<0 0 40>,
@@ -246,6 +262,14 @@
 			<0 0 0 (-104) (-104) (-104) (-104) (-104) (-104) (-104)
 			 (-104) (-104) (-41) 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0>,
 			<0 0 0 (-104) (-104) (-104) (-104) (-104) (-104) (-104)
+			 (-104) (-41) (-41) 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0>,
+			<0 0 0 (-104) (-104) (-104) (-104) (-104) (-104) (-104)
+			 (-104) (-104) (-41) 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0>,
+			<0 0 0 (-104) (-104) (-104) (-104) (-104) (-104) (-104)
+			 (-104) (-41) (-41) 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0>,
+			<0 0 0 (-104) (-104) (-104) (-104) (-104) (-104) (-104)
+			 (-104) (-104) (-41) 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0>,
+			<0 0 0 (-104) (-104) (-104) (-104) (-104) (-104) (-104)
 			 (-104) (-41) (-41) 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0>;
 		qcom,cpr-virtual-corner-init-voltage-adjustment =
 			<0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 35000 0 0 0 0>,
@@ -256,6 +280,10 @@
 			<0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 35000 0 0 0 0>,
 			<0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 35000 0 0 0 0>,
 			<0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 35000 0 0 0 0>,
+			<0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0     0 0 0 0 0>,
+			<0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0     0 0 0 0 0>,
+			<0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0     0 0 0 0 0>,
+			<0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0     0 0 0 0 0>,
 			<0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0     0 0 0 0 0>,
 			<0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0     0 0 0 0 0>,
 			<0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0     0 0 0 0 0>,
