--- a/arch/arm/configs/msm8916-perf_defconfig
+++ b/arch/arm/configs/msm8916-perf_defconfig
@@ -567,3 +567,5 @@ CONFIG_LZ4_DECOMPRESS=y
 CONFIG_W1=y
 CONFIG_W1_MASTER_GPIO=y
 CONFIG_W1_SLAVE_DS2502=y
+CONFIG_MSM_CORE_CTL_HELPER=y
+CONFIG_PRONTO_WLAN=m
