Make squid defconfig work properly
Conflicts:
	BUILDING

--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -27,7 +27,6 @@ CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_BOOTINFO=y
 CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
-CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_EBT_BROUTE=y
 CONFIG_BRIDGE_NF_EBTABLES=y
@@ -75,9 +74,13 @@ CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_XTS=y
+CONFIG_DEBUG_ATOMIC_SLEEP=y
+CONFIG_DEBUG_GPIO=y
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_MEMORY_INIT=y
-CONFIG_DEBUG=n
+CONFIG_DEBUG_MODULE_SCAN_OFF=y
+CONFIG_DEBUG_MUTEXES=y
+CONFIG_DEBUG_SPINLOCK=y
 CONFIG_DIAG_CHAR=y
 CONFIG_DIAG_EXTENSION_SLATE=y
 CONFIG_DIAG_OVER_TTY=y
@@ -86,6 +89,7 @@ CONFIG_DM_CRYPT=y
 CONFIG_DM_REQ_CRYPT=y
 CONFIG_DM_VERITY=n
 CONFIG_DUMMY=y
+CONFIG_DYNAMIC_DEBUG=y
 CONFIG_EARLY_PRINTK=y
 CONFIG_EMBEDDED=y
 CONFIG_ESD_FS=y
@@ -207,6 +211,7 @@ CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_MSM_GPIO_FLASH=y
 CONFIG_LEDS_QPNP=y
 CONFIG_LEDS_TRIGGERS=y
+CONFIG_LOCKUP_DETECTOR=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
@@ -491,6 +496,8 @@ CONFIG_SERIAL_MSM_HSL=y
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 CONFIG_SERIAL_MSM_SMD=y
 CONFIG_SLIMBUS_MSM_NGD=y
+CONFIG_SLUB_DEBUG_ON=y
+CONFIG_SLUB_DEBUG_PANIC_ON=y
 CONFIG_SMB135X_CHARGER=y
 CONFIG_SMB1360_CHARGER_FG=y
 CONFIG_SMB358_CHARGER=y
@@ -500,6 +507,7 @@ CONFIG_SND_SOC=y
 CONFIG_SND_SOC_FSA8500=y
 CONFIG_SND_SOC_MSM8X16=y
 CONFIG_SOCKEV_NLMCAST=y
+CONFIG_SOFTLOCKUP_WATCHDOG_TEST=y
 CONFIG_SOUND=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
