--- a/arch/arm/configs/msm8916-mini_defconfig
+++ b/arch/arm/configs/msm8916-mini_defconfig
@@ -40,6 +40,8 @@ CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
+CONFIG_CFG80211=y
+CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_DEBUG=y
@@ -114,7 +116,6 @@ CONFIG_HAS_DMA=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_HID_APPLE=y
 CONFIG_HID_ELECOM=y
-CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
 CONFIG_HID_MULTITOUCH=y
 CONFIG_HIGHMEM=y
@@ -127,19 +128,68 @@ CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MSM_V2=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
+CONFIG_INET6_AH=y
+CONFIG_INET6_ESP=y
+CONFIG_INET6_IPCOMP=y
+CONFIG_INET=y
+CONFIG_INET_AH=y
+CONFIG_INET_ESP=y
+CONFIG_INET_IPCOMP=y
+CONFIG_INET_LRO=y
+CONFIG_INET_XFRM_MODE_BEET=y
+CONFIG_INET_XFRM_MODE_TRANSPORT=y
+CONFIG_INET_XFRM_MODE_TUNNEL=y
+CONFIG_INET_XFRM_TUNNEL=y
+CONFIG_INET_XFRM_TUNNEL=y
+CONFIG_INPUT_EVBUG=m
 CONFIG_INPUT_EVDEV=y
+CONFIG_INPUT_GPIO=m
 CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_MISC=y
+CONFIG_INPUT_MOUSE=n
 CONFIG_INPUT_MT_WRAPPER=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
+CONFIG_IP6_NF_FILTER=y
+CONFIG_IP6_NF_IPTABLES=y
+CONFIG_IP6_NF_MANGLE=y
+CONFIG_IP6_NF_RAW=y
+CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IPC_LOGGING=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
+CONFIG_IPV6=y
+CONFIG_IPV6_MIP6=y
+CONFIG_IPV6_MULTIPLE_TABLES=y
+CONFIG_IPV6_OPTIMISTIC_DAD=y
+CONFIG_IPV6_PRIVACY=y
+CONFIG_IPV6_ROUTER_PREF=y
+CONFIG_IPV6_ROUTE_INFO=y
+CONFIG_IPV6_SUBTREES=y
+CONFIG_IP_ADVANCED_ROUTER=y
+CONFIG_IP_MULTIPLE_TABLES=y
+CONFIG_IP_NF_ARPFILTER=y
+CONFIG_IP_NF_ARPTABLES=y
+CONFIG_IP_NF_ARP_MANGLE=y
+CONFIG_IP_NF_FILTER=y
+CONFIG_IP_NF_IPTABLES=y
+CONFIG_IP_NF_MANGLE=y
+CONFIG_IP_NF_MATCH_AH=y
+CONFIG_IP_NF_MATCH_ECN=y
+CONFIG_IP_NF_MATCH_TTL=y
+CONFIG_IP_NF_RAW=y
+CONFIG_IP_NF_SECURITY=y
+CONFIG_IP_NF_TARGET_MASQUERADE=y
+CONFIG_IP_NF_TARGET_NETMAP=y
+CONFIG_IP_NF_TARGET_REDIRECT=y
+CONFIG_IP_NF_TARGET_REJECT=y
+CONFIG_IP_PNP=y
+CONFIG_IP_PNP_DHCP=y
+CONFIG_IP_ROUTE_VERBOSE=y
 CONFIG_ISDBT_NMI=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_KALLSYMS_ALL=y
@@ -164,10 +214,15 @@ CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MD=y
+CONFIG_MEDIA_CAMERA_SUPPORT=y
+CONFIG_MEDIA_CONTROLLER=y
+CONFIG_MEDIA_RADIO_SUPPORT=y
+CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_MFD_TI_LMU=y
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
+CONFIG_MMC_BLOCK_TEST=m
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_EMBEDDED_SDIO=y
 CONFIG_MMC_MSM_RAW=y
@@ -176,6 +231,7 @@ CONFIG_MMC_PERF_PROFILING=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_MSM=y
 CONFIG_MMC_SDHCI_PLTFM=y
+CONFIG_MMC_TEST=m
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMI_DEVICE_DTBS=y
 CONFIG_MMI_FACTORY=y
@@ -183,6 +239,8 @@ CONFIG_MMI_RAM_INFO=y
 CONFIG_MMI_SOC_INFO=y
 CONFIG_MMI_UNIT_INFO=y
 CONFIG_MMU500_ACTIVE_PREFETCH_BUG_WITH_SECTION_MAPPING=y
+CONFIG_MOBICORE_API=m
+CONFIG_MOBICORE_SUPPORT=m
 CONFIG_MODULES=y
 CONFIG_MODULE_EXTRA_COPY=y
 CONFIG_MODULE_FORCE_UNLOAD=y
@@ -192,10 +250,15 @@ CONFIG_MODULE_SIG_SHA512=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_MOT_UTAG=y
+CONFIG_MSMB_CAMERA=y
+CONFIG_MSMB_JPEG=y
 CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_AVTIMER=y
+CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_BOOT_STATS=y
+CONFIG_MSM_BUSPM_DEV=m
 CONFIG_MSM_BUS_SCALING=y
+CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_CCI=y
 CONFIG_MSM_COMMON_LOG=y
 CONFIG_MSM_CORE_CTL_HELPER=y
@@ -220,6 +283,7 @@ CONFIG_MSM_PIL_MSS_QDSP6V5=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_QMI_INTERFACE=y
 CONFIG_MSM_QPNP_INT=y
+CONFIG_MSM_RMNET_BAM=y
 CONFIG_MSM_RTB=y
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
 CONFIG_MSM_SCM=y
@@ -244,12 +308,93 @@ CONFIG_MT9M114=y
 CONFIG_MT9V113=y
 CONFIG_NAMESPACES=y
 CONFIG_NEON=y
+CONFIG_NET=y
+CONFIG_NETDEVICES=y
+CONFIG_NETFILTER=y
+CONFIG_NETFILTER_TPROXY=y
+CONFIG_NETFILTER_XT_MATCH_COMMENT=y
+CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
+CONFIG_NETFILTER_XT_MATCH_CONNMARK=y
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NETFILTER_XT_MATCH_DSCP=y
+CONFIG_NETFILTER_XT_MATCH_ESP=y
+CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=y
+CONFIG_NETFILTER_XT_MATCH_HELPER=y
+CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
+CONFIG_NETFILTER_XT_MATCH_LENGTH=y
+CONFIG_NETFILTER_XT_MATCH_LIMIT=y
+CONFIG_NETFILTER_XT_MATCH_MAC=y
+CONFIG_NETFILTER_XT_MATCH_MARK=y
+CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
+CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
+CONFIG_NETFILTER_XT_MATCH_POLICY=y
+CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
+CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
+CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG=y
+CONFIG_NETFILTER_XT_MATCH_QUOTA=y
+CONFIG_NETFILTER_XT_MATCH_SOCKET=y
+CONFIG_NETFILTER_XT_MATCH_STATE=y
+CONFIG_NETFILTER_XT_MATCH_STATISTIC=y
+CONFIG_NETFILTER_XT_MATCH_STRING=y
+CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
+CONFIG_NETFILTER_XT_MATCH_TIME=y
+CONFIG_NETFILTER_XT_MATCH_U32=y
+CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
+CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
+CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
+CONFIG_NETFILTER_XT_TARGET_HARDIDLETIMER=y
+CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
+CONFIG_NETFILTER_XT_TARGET_LOG=y
+CONFIG_NETFILTER_XT_TARGET_MARK=y
+CONFIG_NETFILTER_XT_TARGET_NFLOG=y
+CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
+CONFIG_NETFILTER_XT_TARGET_NOTRACK=y
+CONFIG_NETFILTER_XT_TARGET_SECMARK=y
+CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
+CONFIG_NETFILTER_XT_TARGET_TPROXY=y
+CONFIG_NETFILTER_XT_TARGET_TRACE=y
+CONFIG_NET_CLS_ACT=y
+CONFIG_NET_CLS_FLOW=y
+CONFIG_NET_CLS_FW=y
+CONFIG_NET_CLS_U32=y
+CONFIG_NET_EMATCH=y
+CONFIG_NET_EMATCH_CMP=y
+CONFIG_NET_EMATCH_META=y
+CONFIG_NET_EMATCH_NBYTE=y
+CONFIG_NET_EMATCH_TEXT=y
+CONFIG_NET_EMATCH_U32=y
+CONFIG_NET_KEY=y
+CONFIG_NET_KEY_MIGRATE=y
+CONFIG_NET_SCHED=y
+CONFIG_NET_SCH_HTB=y
+CONFIG_NET_SCH_PRIO=y
+CONFIG_NF_CONNTRACK=y
+CONFIG_NF_CONNTRACK_AMANDA=y
+CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_NF_CONNTRACK_FTP=y
+CONFIG_NF_CONNTRACK_H323=y
+CONFIG_NF_CONNTRACK_IPV4=y
+CONFIG_NF_CONNTRACK_IPV6=y
+CONFIG_NF_CONNTRACK_IRC=y
+CONFIG_NF_CONNTRACK_NETBIOS_NS=y
+CONFIG_NF_CONNTRACK_PPTP=y
+CONFIG_NF_CONNTRACK_SANE=y
+CONFIG_NF_CONNTRACK_SECMARK=y
+CONFIG_NF_CONNTRACK_SIP=y
+CONFIG_NF_CONNTRACK_TFTP=y
+CONFIG_NF_CT_NETLINK=y
+CONFIG_NF_CT_PROTO_DCCP=y
+CONFIG_NF_CT_PROTO_SCTP=y
+CONFIG_NF_CT_PROTO_UDPLITE=y
+CONFIG_NF_NAT_IPV4=y
+CONFIG_NL80211_TESTMODE=y
 CONFIG_NLS_ASCII=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NO_HZ=y
 CONFIG_NR_CPUS=8
 CONFIG_ONESHOT_SYNC=y
+CONFIG_OPROFILE=m
 CONFIG_OV5645=y
 CONFIG_PACKET=y
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
@@ -294,6 +439,7 @@ CONFIG_QPNP_VIBRATOR=y
 CONFIG_QPNP_VM_BMS=y
 CONFIG_QSEECOM=y
 CONFIG_RADIO_IRIS=y
+CONFIG_RADIO_IRIS_TRANSPORT=m
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
@@ -359,6 +505,7 @@ CONFIG_SOFTLOCKUP_WATCHDOG_TEST=y
 CONFIG_SOUND=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
+CONFIG_SPI_SPIDEV=m
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_SPS=y
@@ -378,7 +525,7 @@ CONFIG_TMPFS=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_MMI=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
-CONFIG_TOUCHSCREEN_TOUCHX=y
+CONFIG_TOUCHSCREEN_TOUCHX=m
 CONFIG_TOUCHSCREEN_TOUCHX_BASE=y
 CONFIG_TUN=y
 CONFIG_UHID=y
@@ -388,6 +535,7 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_UNIX=y
 CONFIG_USB_ACM=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
+CONFIG_USB_BAM=y
 CONFIG_USB_CCID_BRIDGE=y
 CONFIG_USB_CI13XXX_MSM=y
 CONFIG_USB_EHCI_EHSET=y
@@ -395,6 +543,9 @@ CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_MSM=y
 CONFIG_USB_EHCI_MSM_UICC=y
 CONFIG_USB_EHSET_TEST_FIXTURE=y
+CONFIG_USB_GADGET=y
+CONFIG_USB_GADGET_DEBUG_FILES=y
+CONFIG_USB_GADGET_DEBUG_FS=y
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_MON=y
 CONFIG_USB_PHY=y
@@ -412,14 +563,21 @@ CONFIG_USB_STORAGE_ONETOUCH=y
 CONFIG_USB_STORAGE_SDDR09=y
 CONFIG_USB_STORAGE_SDDR55=y
 CONFIG_USB_STORAGE_USBAT=y
+CONFIG_USB_USBNET=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VFAT_FS=y
 CONFIG_VFP=y
 CONFIG_VIDEOBUF2_MSM_MEM=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
+CONFIG_WCNSS_CORE=y
+CONFIG_WCNSS_CORE_PRONTO=y
+CONFIG_WCNSS_MEM_PRE_ALLOC=y
+CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
 CONFIG_XFRM=y
 CONFIG_XFRM_MIGRATE=y
 CONFIG_XFRM_STATISTICS=y
 CONFIG_XFRM_SUB_POLICY=y
 CONFIG_XFRM_USER=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_ZSMALLOC=y
