Maybe get rid of mouse pointer from TWRP

--- a/arch/arm/configs/msm8916-mini_defconfig
+++ b/arch/arm/configs/msm8916-mini_defconfig
@@ -141,7 +141,6 @@ CONFIG_INET_XFRM_MODE_TRANSPORT=y
 CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_XFRM_TUNNEL=y
 CONFIG_INET_XFRM_TUNNEL=y
-CONFIG_INPUT_EVBUG=m
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_GPIO=m
 CONFIG_INPUT_HBTP_INPUT=y
@@ -149,6 +148,7 @@ CONFIG_INPUT_JOYSTICK=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_MOUSE=n
+CONFIG_INPUT_MOUSEDEV=n
 CONFIG_INPUT_MT_WRAPPER=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_INPUT_UINPUT=y
