--- a/boot/ramdisk_lte/init.qcom.rc
+++ b/boot/ramdisk_lte/init.qcom.rc
@@ -1,4 +1,4 @@
-# Copyright (c) 2009-2012, 2014, The Linux Foundation. All rights reserved.
+# Copyright (c) 2009-2012, 2014-2015, The Linux Foundation. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -220,6 +220,9 @@ on post-fs-data
     # Create directory used by the DASH client
     mkdir /data/misc/dash 0770 media audio
 
+    # Create directory used by display clients
+    mkdir /data/misc/display 0770 system graphics
+
     # Mounting of persist is moved to 'on emmc-fs' and 'on fs' sections
     # We chown/chmod /persist again so because mount is run as root + defaults
     chown system system /persist
@@ -271,12 +274,11 @@ on post-fs-data
     #Create folder for mm-qcamera-daemon
     mkdir /data/camera 0770 media camera
 
-# PERFD not used
-#    #Create PERFD deamon related dirs
-#    mkdir /data/misc/perfd 0755 root system
-#    chmod 2755 /data/misc/perfd
-#    mkdir /data/system/perfd 0770 root system
-#    chmod 2770 /data/system/perfd
+    #Create PERFD deamon related dirs
+    mkdir /data/misc/perfd 0755 root system
+    chmod 2755 /data/misc/perfd
+    mkdir /data/system/perfd 0770 root system
+    chmod 2770 /data/system/perfd
 
     # NFC local data and nfcee xml storage
     mkdir /data/nfc 0770 nfc nfc
@@ -367,6 +369,7 @@ service qcom-c_main-sh /system/bin/sh /init.class_main.sh
 on property:vold.decrypt=trigger_restart_framework
     start qcom-c_main-sh
     start config_bluetooth
+    start wcnss-service
 
 on property:persist.env.fastdorm.enabled=true
     setprop persist.radio.data_no_toggle 1
@@ -537,6 +540,15 @@ service ptt_ffbm /system/bin/ptt_socket_app -f -d
     disabled
     oneshot
 
+# This starts as root but later drops down to WIFI_AID just like
+#supplicant
+service ptt_logging /system/bin/ptt_socket_app -d
+    class main
+    disabled
+    group wifi log
+    oneshot
+
+
 #Service not used
 #service cnss_diag /system/bin/cnss_diag --q
 #    class main
@@ -613,7 +625,7 @@ service atfwd /system/bin/ATFWD-daemon
     user system
     group system radio
 
-service hostapd /system/bin/hostapd -dd /data/hostapd/hostapd.conf
+service hostapd /system/bin/hostapd -dd /data/misc/wifi/hostapd.conf
     class late_start
     user root
     group root
@@ -758,14 +770,14 @@ on property:init.svc.sdcard=running
 # MOT Security Asset CR IKJBMR2-6392
 #service diag_mdlog_start /system/bin/diag_mdlog
 #    class late_start
-#    user sdcard_rw
+#    user shell
 #    group system qcom_diag sdcard_rw sdcard_r media_rw
 #    disabled
 #    oneshot
 
 #service diag_mdlog_stop /system/bin/diag_mdlog -k
 #    class late_start
-#    user sdcard_rw
+#    user shell
 #    group system qcom_diag sdcard_rw sdcard_r media_rw
 #    disabled
 #    oneshot
@@ -786,6 +798,11 @@ on property:init.svc.sdcard=running
 #    start rootagent
 #on property:persist.sys.rootagent=0
 #    stop rootagent
+
+service bms-sh /system/bin/sh /init.qcom.bms.sh
+    class main
+    user root
+    oneshot
 
 service vm_bms /system/bin/vm_bms
     user root
