--- a/boot/ramdisk_lte/ueventd.qcom.rc
+++ b/boot/ramdisk_lte/ueventd.qcom.rc
@@ -49,7 +49,7 @@
 /dev/wwan_ioctl           0660   net_admin  net_admin
 /dev/ipaNatTable          0660   net_admin  net_admin
 
-/dev/block/platform/soc.0/by-name/frp 0600 system system
+/dev/block/bootdevice/by-name/frp 0600 system system
 
 #permissions for CSVT
 /dev/smd11                0660   radio      radio
@@ -209,6 +209,7 @@
 #nfc permissions
 /dev/nfc-nci              0660    nfc         nfc
 /dev/assd                 0660    nfc         nfc
+/dev/bcm2079x-i2c         0660    nfc         nfc
 
 # UIO devices
 /dev/uio0                 0660   system     system
@@ -224,6 +225,9 @@
 # Ramdump devices
 /dev/ramdump*             0640   system     system
 
+# Add device block for FRP
+/dev/block/bootdevice/by-name/config    0660   system     system
+
 # Moto Sensors
 /dev/stml0xx               0660  system     compass
 /dev/stml0xx_as            0660  compass    compass
@@ -232,15 +236,16 @@
 /dev/akm09912_dev          0660  compass    compass
 
 #DTV
-/dev/isdbt                0660  system     system
+/dev/isdbt                0660  mot_dtv     mot_dtv
 
 # Permissions for tcmd
-/dev/i2c-1                0660   root       system
-/dev/i2c-2                0660   root       system
-/dev/i2c-4                0660   root       system
+/dev/i2c-*                0660   root       system
 
 # HOB
 /dev/mot_hob_ram          0660   radio      radio
 
 # Subsystem Restart Ramdump
 /dev/ramdump*             0660   radio      radio
+
+# haptic
+/dev/drv2605              0660   system     system
