Update my defconfigs to be in line with Motorola's

--- a/arch/arm/configs/msm8916-mini_defconfig
+++ b/arch/arm/configs/msm8916-mini_defconfig
@@ -4,7 +4,6 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
-CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_APDS9930=y
@@ -501,6 +500,8 @@ CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_NDP_BAM=y
 CONFIG_STAGING=y
 CONFIG_STRICT_MEMORY_RWX=y
+CONFIG_SUSPEND_TIME=y
+CONFIG_SUSPEND_TIME_TIMEKEEPING=y
 CONFIG_SWAP=y
 CONFIG_SWITCH=y
 CONFIG_SYSVIPC=y
