--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -4,7 +4,6 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
-CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_APDS9930=y
@@ -200,6 +199,7 @@ CONFIG_L2TP_DEBUGFS=y
 CONFIG_L2TP_ETH=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_V3=y
+CONFIG_LEDS_ATC=y
 CONFIG_LEDS_BD65B60=y
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_MSM_GPIO_FLASH=y
@@ -492,6 +492,7 @@ CONFIG_SND=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_FSA8500=y
 CONFIG_SND_SOC_MSM8X16=y
+CONFIG_SND_USB_AUDIO=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_SOFTLOCKUP_WATCHDOG_TEST=y
 CONFIG_SOUND=y
@@ -504,6 +505,8 @@ CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_NDP_BAM=y
 CONFIG_STAGING=y
 CONFIG_STRICT_MEMORY_RWX=y
+CONFIG_SUSPEND_TIME=y
+CONFIG_SUSPEND_TIME_TIMEKEEPING=y
 CONFIG_SWAP=y
 CONFIG_SWITCH=y
 CONFIG_SYSVIPC=y
@@ -558,6 +561,9 @@ CONFIG_VFAT_FS=y
 CONFIG_VFP=y
 CONFIG_VIDEOBUF2_MSM_MEM=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
+CONFIG_W1=y
+CONFIG_W1_MASTER_GPIO=y
+CONFIG_W1_SLAVE_DS2502=y
 CONFIG_WCNSS_CORE=y
 CONFIG_WCNSS_CORE_PRONTO=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
