Include dts for condor and otus
Conflicts:
	arch/arm/boot/dts/qcom/batterydata-ft40-lishen.dtsi

--- a/arch/arm/boot/dts/qcom/msm8610-coresight.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8610-coresight.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2013-2014, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2013, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -20,7 +20,6 @@
 		interrupt-names = "byte-cntr-irq";
 
 		qcom,memory-size = <0x100000>;
-		qcom,sg-enable;
 
 		coresight-id = <0>;
 		coresight-name = "coresight-tmc-etr";
@@ -30,9 +29,8 @@
 
 	tpiu: tpiu@fc320000 {
 		compatible = "arm,coresight-tpiu";
-		reg = <0xfc320000 0x1000>,
-		      <0xfd512000 0x1000>;
-		reg-names = "tpiu-base", "nidnt-base";
+		reg = <0xfc320000 0x1000>;
+		reg-names = "tpiu-base";
 
 		coresight-id = <1>;
 		coresight-name = "coresight-tpiu";
@@ -47,10 +45,6 @@
 
 		qcom,vdd-io-voltage-level = <2950000 2950000>;
 		qcom,vdd-io-current-level = <200 50000>;
-
-		qcom,nidntsw;
-		qcom,nidnt-swduart;
-		qcom,nidnt-swdtrc;
 	};
 
 	replicator: replicator@fc324000 {
@@ -158,7 +152,6 @@
 		coresight-outports = <0>;
 		coresight-child-list = <&funnel_a7ss>;
 		coresight-child-ports = <0>;
-		coresight-etm-cpu = <&CPU0>;
 
 		qcom,pc-save;
 		qcom,round-robin;
@@ -175,7 +168,6 @@
 		coresight-outports = <0>;
 		coresight-child-list = <&funnel_a7ss>;
 		coresight-child-ports = <1>;
-		coresight-etm-cpu = <&CPU1>;
 
 		qcom,pc-save;
 		qcom,round-robin;
@@ -192,7 +184,6 @@
 		coresight-outports = <0>;
 		coresight-child-list = <&funnel_a7ss>;
 		coresight-child-ports = <2>;
-		coresight-etm-cpu = <&CPU2>;
 
 		qcom,pc-save;
 		qcom,round-robin;
@@ -209,7 +200,6 @@
 		coresight-outports = <0>;
 		coresight-child-list = <&funnel_a7ss>;
 		coresight-child-ports = <3>;
-		coresight-etm-cpu = <&CPU3>;
 
 		qcom,pc-save;
 		qcom,round-robin;
