--- a/arch/arm/boot/dts/qcom/msm8610-v2-pm.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8610-v2-pm.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2013-2014, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2013-2014 The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -16,7 +16,6 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 		reg = <0xf9089000 0x1000>;
-		qcom,name = "core0";
 		qcom,core-id = <0>;
 		qcom,saw2-ver-reg = <0xfd0>;
 		qcom,saw2-cfg = <0x00>;
@@ -34,7 +33,6 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 		reg = <0xf9099000 0x1000>;
-		qcom,name = "core1";
 		qcom,core-id = <1>;
 		qcom,saw2-ver-reg = <0xfd0>;
 		qcom,saw2-cfg = <0x00>;
@@ -45,14 +43,13 @@
 				0b 94 5b 80 10 26 30 0f];
 		qcom,saw2-spm-cmd-pc = [20 10 80 30 90 5b 60 03 60 3b 76 76
 				0b 94 5b 80 10 26 30 0f];
-	};
+		};
 
 	qcom,spm@f90a9000 {
 		compatible = "qcom,spm-v2";
 		#address-cells = <1>;
 		#size-cells = <1>;
 		reg = <0xf90a9000 0x1000>;
-		qcom,name = "core2";
 		qcom,core-id = <2>;
 		qcom,saw2-ver-reg = <0xfd0>;
 		qcom,saw2-cfg = <0x00>;
@@ -70,7 +67,6 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 		reg = <0xf90b9000 0x1000>;
-		qcom,name = "core3";
 		qcom,core-id = <3>;
 		qcom,saw2-ver-reg = <0xfd0>;
 		qcom,saw2-cfg = <0x00>;
@@ -88,7 +84,6 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 		reg = <0xf9012000 0x1000>;
-		qcom,name = "system-l2";
 		qcom,core-id = <0xffff>; /* L2/APCS SAW */
 		qcom,saw2-ver-reg = <0xfd0>;
 		qcom,saw2-cfg = <0x14>;
@@ -100,97 +95,93 @@
 		qcom,vctl-port = <0x0>;
 		qcom,phase-port = <0x1>;
 		qcom,pfm-port = <0x2>;
-		qcom,cpu-vctl-mask = <0xf>;
 		qcom,saw2-spm-cmd-ret = [00 03 00 0f];
 		qcom,saw2-spm-cmd-gdhs = [00 20 32 6b c0 e0 d0 42 03 50
-			4e 02 02 d0 e0 c0 22 6b 02 32 50 0f];
+				4e 02 02 d0 e0 c0 22 6b 02 32 50 0f];
 		qcom,saw2-spm-cmd-pc = [00 32 b0 10 e0 d0 6b c0 42 f0
 				11 07 01 b0 50 4e 02 02 c0 d0 12 e0 6b 02 32
 				50 f0 0f]; /*APCS_PMIC_OFF_L2RAM_OFF*/
+		qcom,saw2-spm-cmd-pc-no-rpm = [00 32 b0 10 e0 d0 6b c0 42 f0
+				11 03 01 b0 50 4e 02 02 c0 d0 12 e0 6b 02 32
+				50 f0 0f]; /*APCS_PMIC_OFF_L2RAM_OFF*/
+		qcom,L2-spm-is-apcs-master;
 	};
 
-	qcom,lpm-levels {
+	lpm_levels: qcom,lpm-levels {
 		compatible = "qcom,lpm-levels";
+		qcom,default-l2-state = "l2_cache_active";
 		#address-cells = <1>;
 		#size-cells = <0>;
 
-		qcom,pm-cluster@0 {
-			reg = <0>;
-			#address-cells = <1>;
-			#size-cells = <0>;
-			label = "system";
-			qcom,spm-device-names = "l2";
-			qcom,default-level = <0>;
+		qcm,cpu-modes {
+			compatible = "qcom,cpu-modes";
 
-			qcom,pm-cluster-level@0 {
-				reg = <0>;
-				label = "l2-cache-active";
-				qcom,spm-l2-mode = "active";
-				qcom,latency-us = <10>;
-				qcom,ss-power = <3000>;
-				qcom,energy-overhead = <60000>;
-				qcom,time-overhead = <110>;
+			qcom,cpu-modes@0 {
+				qcom,mode = "wfi";
+				qcom,latency-us = <1>;
+				qcom,ss-power = <530>;
+				qcom,energy-overhead = <52800>;
+				qcom,time-overhead = <100>;
 			};
 
-			qcom,pm-cluster-level@1 {
-				reg = <1>;
-				label = "l2-cache-gdhs";
-				qcom,spm-l2-mode = "gdhs";
+			qcom,cpu-modes@1 {
+				qcom,mode = "standalone_pc";
+				qcom,latency-us = <500>;
+				qcom,ss-power = <410>;
+				qcom,energy-overhead = <603400>;
+				qcom,time-overhead = <1200>;
+				qcom,use-broadcast-timer;
+			};
+
+			qcom,cpu-modes@2 {
+				qcom,mode = "pc";
+				qcom,latency-us = <550>;
+				qcom,ss-power = <372>;
+				qcom,energy-overhead = <700000>;
+				qcom,time-overhead = <1410>;
+				qcom,use-broadcast-timer;
+			};
+		};
+
+		qcom,system-modes {
+			compatible = "qcom,system-modes";
+
+			qcom,system-modes@0 {
+				qcom,l2 = "l2_cache_gdhs";
 				qcom,latency-us = <700>;
 				qcom,ss-power = <372>;
 				qcom,energy-overhead = <738750>;
 				qcom,time-overhead = <1410>;
-				qcom,min-child-idx = <2>;
-				qcom,last-core-only;
+				qcom,min-cpu-mode= "standalone_pc";
+				qcom,sync-cpus;
 			};
 
-			qcom,pm-cluster-level@2 {
-				reg = <2>;
-				label = "l2-cache-pc";
-				qcom,spm-l2-mode = "pc";
+			qcom,system-modes@1 {
+				qcom,l2 = "l2_cache_pc_no_rpm";
+				qcom,latency-us = <1000>;
+				qcom,ss-power = <315>;
+				qcom,energy-overhead = <1027150>;
+				qcom,time-overhead = <2400>;
+				qcom,min-cpu-mode= "standalone_pc";
+				qcom,sync-cpus;
+			};
+
+			qcom,system-modes@2 {
+				qcom,l2 = "l2_cache_pc";
 				qcom,latency-us = <12700>;
 				qcom,ss-power = <315>;
 				qcom,energy-overhead = <1027150>;
 				qcom,time-overhead = <2400>;
-				qcom,min-child-idx = <2>;
-				qcom,notify-rpm;
-				qcom,last-core-only;
-			};
-
-			qcom,pm-cpu {
-				#address-cells = <1>;
-				#size-cells = <0>;
-
-				qcom,pm-cpu-level@0{
-					reg = <0>;
-					qcom,spm-cpu-mode = "wfi";
-					qcom,latency-us = <1>;
-					qcom,ss-power = <530>;
-					qcom,energy-overhead = <52800>;
-					qcom,time-overhead = <100>;
-				};
-
-				qcom,pm-cpu-level@1 {
-					reg = <1>;
-					qcom,spm-cpu-mode = "standalone_pc";
-					qcom,latency-us = <500>;
-					qcom,ss-power = <410>;
-					qcom,energy-overhead = <603400>;
-					qcom,time-overhead = <1200>;
-					qcom,use-broadcast-timer;
-				};
-
-				qcom,pm-cpu-level@2 {
-					reg = <2>;
-					qcom,spm-cpu-mode = "pc";
-					qcom,latency-us = <550>;
-					qcom,ss-power = <372>;
-					qcom,energy-overhead = <700000>;
-					qcom,time-overhead = <1410>;
-					qcom,use-broadcast-timer;
-				};
+				qcom,min-cpu-mode= "pc";
+				qcom,sync-cpus;
+				qcom,send-rpm-sleep-set;
 			};
 		};
+	};
+
+	qcom,pm-boot {
+		compatible = "qcom,pm-boot";
+		qcom,mode = "tz";
 	};
 
 	qcom,mpm@fc4281d0 {
@@ -199,7 +190,6 @@
 		    <0xf9011008 0x4>;   /* MSM_APCS_GCC_BASE 4K */
 		reg-names = "vmpm", "ipc";
 		interrupts = <0 171 1>;
-		clock-names = "xo";
 
 		qcom,ipc-bit-offset = <1>;
 
@@ -307,15 +297,19 @@
 			<37  98>,
 			<38  99>,
 			<39  100>,
-			<40  101>;
+			<40  101>,
+			<41  8>;
 	};
 
-	qcom,pm@fe805664 {
-		compatible = "qcom,pm";
+	qcom,pm-8x60@fe805664 {
+		compatible = "qcom,pm-8x60";
 		reg = <0xfe805664 0x40>;
+		qcom,pc-mode = "tz_l2_int";
 		qcom,use-sync-timer;
 		qcom,pc-resets-timer;
+		qcom,cpus-as-clocks;
 		qcom,synced-clocks;
+		qcom,lpm-levels = <&lpm_levels>;
 	};
 
 	qcom,cpu-sleep-status@f9088008{
