Created mini defconfig for MSM8610

--- a/arch/arm/configs/msm8610-mini_defconfig
+++ b/arch/arm/configs/msm8610-mini_defconfig
@@ -53,8 +53,6 @@ CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
 CONFIG_CGROUP_MEM_RES_CTLR=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_CGROUPS=y
-CONFIG_CHR_DEV_SCH=y
-CONFIG_CHR_DEV_SG=y
 CONFIG_CMA_SIZE_MBYTES=4
 CONFIG_CMA=y
 CONFIG_COMPACTION=y
@@ -78,7 +76,6 @@ CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_DEBUG_SET_MODULE_RONX=y
-# CONFIG_DEBUG_USER is not set
 CONFIG_DIAG_CHAR=y
 CONFIG_DIAG_EXTENSION_SLATE=y
 CONFIG_DIAG_OVER_TTY=y
@@ -90,11 +87,9 @@ CONFIG_EFI_PARTITION=y
 CONFIG_EMBEDDED=y
 CONFIG_ENABLE_DEFAULT_TRACERS=y
 CONFIG_ESD_FS=y
-CONFIG_EXPERIMENTAL=y
 CONFIG_EXT2_FS_SECURITY=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS=y
-# CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 CONFIG_EXT3_FS_SECURITY=y
 CONFIG_EXT3_FS_XATTR=y
 CONFIG_EXT3_FS=y
@@ -117,13 +112,11 @@ CONFIG_FUSE_FS=y
 CONFIG_GC0339=y
 CONFIG_GPIO_QPNP_PIN=y
 CONFIG_GPIO_SYSFS=y
-CONFIG_GT9XX_TOUCHPANEL_DEBUG=y
 CONFIG_GT9XX_TOUCHPANEL_DRIVER=y
 CONFIG_GT9XX_TOUCHPANEL_UPDATE=y
 CONFIG_HI256=y
 CONFIG_HID_APPLE=y
 CONFIG_HID_ELECOM=y
-CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
 CONFIG_HID_MOTOROLA=y
 CONFIG_HIGHMEM=y
@@ -134,7 +127,6 @@ CONFIG_HW_RANDOM=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_QUP=y
 CONFIG_I2C=y
-# CONFIG_IKCONFIG_PROC is not set
 CONFIG_IKCONFIG=y
 CONFIG_IMX134=y
 CONFIG_INET6_AH=y
@@ -199,7 +191,7 @@ CONFIG_IPV6_TUNNEL=y
 CONFIG_IPV6=y
 CONFIG_ISDBT_NMI=y
 CONFIG_KALLSYMS_ALL=y
-CONFIG_KERNEL_LZO=y
+CONFIG_KERNEL_LZMA=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYS=y
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
@@ -401,7 +393,6 @@ CONFIG_PREEMPT=y
 CONFIG_PRINTK_TIME=y
 CONFIG_PROC_DEVICETREE=y
 CONFIG_PROFILING=y
-CONFIG_PRONTO_WLAN=m
 CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
 #CONFIG_QPNP_BMS is not set
