--- a/arch/arm/boot/dts/qcom/msm8610-mdss-panels.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8610-mdss-panels.dtsi
@@ -13,6 +13,7 @@
 #include "dsi-panel-truly-wvga-video.dtsi"
 #include "dsi-panel-truly-wvga-cmd.dtsi"
 #include "dsi-panel-nt35590-720p-video.dtsi"
+#include "dsi-panel-nt35590-720p-cmd.dtsi"
 #include "dsi-panel-otm8018b-fwvga-video.dtsi"
 #include "dsi-panel-hx8379a-wvga-video.dtsi"
 #include "dsi-panel-hx8389b-qhd-video.dtsi"
