--- a/arch/arm/boot/dts/qcom/msm8610-qrd-skuaa.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8610-qrd-skuaa.dtsi
@@ -1,4 +1,4 @@
- /* Copyright (c) 2013, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2013-2014, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -28,21 +28,17 @@
         qcom,ext-spk-amp-gpio = <&msmgpio 92 0x0>;
     };
 
-	usb@f9a55000 {
-		qcom,hsusb-otg-phy-init-seq =
-		<0x44 0x80 0x6a 0x81 0x34 0x82 0x13 0x83 0xffffffff>;
-	};
-
 	i2c@f9924000 { /* BLSP-1 QUP-2 */
 		nfc-nci@e {
 			compatible = "qcom,nfc-nci";
 			reg = <0x0e>;
 			qcom,irq-gpio = <&msmgpio 77 0x00>;
+			qcom,clk-req-gpio = <&msmgpio 75 0x00>;
 			qcom,dis-gpio = <&msmgpio 93 0x00>;
-			qcom,clk-en-gpio = <&msmgpio 78 0x00>;
+			qcom,clk-src-gpio = <&msmgpio 78 0x00>;
 			qcom,clk-src = "GPCLK2";
 			interrupt-parent = <&msmgpio>;
-			interrupts = <77 0>;
+			interrupts = <77 75 0>;
 			qcom,clk-gpio = <&msmgpio 75 0x00>;
 		};
 	};
