--- a/arch/arm/boot/dts/qcom/msm8610-qrd-skuab.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8610-qrd-skuab.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2013, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2013-2014, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -88,6 +88,8 @@
 				00 FF FF FF FF FF FF FF 00 00
 				00 FF FF FF FF FF FF FF FF FF
 				F8 FF FF FF E4 01];
+			goodix,have-touch-key;
+			goodix,driver-send-cfg;
 		};
 	};
 	gen-vkeys {
@@ -99,20 +101,6 @@
 		qcom,panel-maxy = <946>;
 		qcom,key-codes = <139 102 158>;
 		qcom,y-offset = <0>;
-	};
-
-	i2c@f9924000 { /* BLSP-1 QUP-2 */
-		nfc-nci@e {
-			compatible = "qcom,nfc-nci";
-			reg = <0x0e>;
-			qcom,irq-gpio = <&msmgpio 77 0x00>;
-			qcom,dis-gpio = <&msmgpio 93 0x00>;
-			qcom,clk-en-gpio = <&msmgpio 78 0x00>;
-			qcom,clk-src = "GPCLK2";
-			interrupt-parent = <&msmgpio>;
-			interrupts = <77 0>;
-			qcom,clk-gpio = <&msmgpio 75 0x00>;
-		};
 	};
 
     i2c@f9925000 {
