--- a/drivers/staging/pronto/Kbuild
+++ b/drivers/staging/pronto/Kbuild
@@ -14,6 +14,10 @@ ifeq ($(KERNEL_BUILD),1)
 	CONFIG_PRIMA_WLAN_LFR := y
 	CONFIG_QCOM_TDLS := y
 	CONFIG_PRIMA_WLAN_OKC := y
+	CONFIG_PRIMA_WLAN_11AC_HIGH_TP := y
+	CONFIG_QCOM_VOWIFI_11R := y
+	CONFIG_WLAN_FEATURE_11W := y
+	CONFIG_ENABLE_LINUX_REG := y
 endif
 
 ifeq ($(KERNEL_BUILD), 0)
