intelli_plug: added faux123's v4.0 implementation
This commit squashes a bunch of commits together.

--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -151,6 +151,7 @@ CONFIG_INPUT_MISC=y
 CONFIG_INPUT_MT_WRAPPER=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_INPUT_UINPUT=y
+CONFIG_INTELLI_PLUG=y
 CONFIG_ION_MSM=y
 CONFIG_ION=y
 CONFIG_IP6_NF_FILTER=y
@@ -407,6 +408,7 @@ CONFIG_PM_WAKELOCKS=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_POWER_RESET=y
 CONFIG_POWER_SUPPLY=y
+CONFIG_POWERSUSPEND=y
 CONFIG_PPP_ASYNC=y
 CONFIG_PPP_BSDCOMP=y
 CONFIG_PPP_DEFLATE=y
