defconfig: make new wlan drivers compile

--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -436,6 +436,7 @@ CONFIG_PWM=y
 CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_QCOM_SPS_DMA=y
 CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_QCOM_TDLS=y
 CONFIG_QPNP_CABLE_DETECTION=y
 CONFIG_QPNP_LINEAR_CHARGER=y
 CONFIG_QPNP_POWER_ON=y
