defconfig: add some extra Pronto WLAN features

--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -54,12 +54,12 @@ CONFIG_CMA=y
 CONFIG_CORESIGHT=n
 CONFIG_CP_ACCESS=y
 CONFIG_CPU_BOOST=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_HAS_L2_PMU=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 CONFIG_CPU_IDLE=y
@@ -89,6 +89,7 @@ CONFIG_DUMMY=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_EARLY_PRINTK=y
 CONFIG_EMBEDDED=y
+CONFIG_ENABLE_LINUX_REG=y
 CONFIG_ESD_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS=y
@@ -419,6 +420,9 @@ CONFIG_PPPOPNS=y
 CONFIG_PPP_SYNC_TTY=y
 CONFIG_PPP=y
 CONFIG_PREEMPT=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRINTK_TIME=y
 CONFIG_PROC_DEVICETREE=y
 CONFIG_PROFILING=y
@@ -431,6 +435,7 @@ CONFIG_PWM_QPNP=y
 CONFIG_PWM=y
 CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_QCOM_SPS_DMA=y
+CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_QPNP_CABLE_DETECTION=y
 CONFIG_QPNP_LINEAR_CHARGER=y
 CONFIG_QPNP_POWER_ON=y
@@ -572,6 +577,7 @@ CONFIG_WCNSS_CORE_PRONTO=y
 CONFIG_WCNSS_CORE=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
+CONFIG_WLAN_FEATURE_11W=y
 CONFIG_XFRM_MIGRATE=y
 CONFIG_XFRM_STATISTICS=y
 CONFIG_XFRM_SUB_POLICY=y
