defconfig: build in some crypto features

--- a/arch/arm/configs/msm8916-mini_defconfig
+++ b/arch/arm/configs/msm8916-mini_defconfig
@@ -60,7 +60,9 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_HAS_L2_PMU=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 CONFIG_CPU_IDLE=y
+CONFIG_CRYPTO_AES=y
 CONFIG_CRYPTO_AES_ARM=y
+CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_CTR=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
@@ -68,6 +70,9 @@ CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_NULL=y
+CONFIG_CRYPTO_RNG=y
+CONFIG_CRYPTO_SHA1_ARM=y
+CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_XTS=y
