--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -63,7 +63,9 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_HAS_L2_PMU=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 CONFIG_CPU_IDLE=y
+CONFIG_CRYPTO_AES=y
 CONFIG_CRYPTO_AES_ARM=y
+CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_CTR=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
@@ -71,6 +73,9 @@ CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_NULL=y
+CONFIG_CRYPTO_RNG=y
+CONFIG_CRYPTO_SHA1_ARM
+CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_XTS=y
