defconfig: enable exfat filesystem

--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -96,6 +96,7 @@ CONFIG_EARLY_PRINTK=y
 CONFIG_EMBEDDED=y
 CONFIG_ENABLE_LINUX_REG=y
 CONFIG_ESD_FS=y
+CONFIG_EXFAT_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS_SECURITY=y
