--- a/arch/arm/configs/msm8916-mini_defconfig
+++ b/arch/arm/configs/msm8916-mini_defconfig
@@ -78,6 +78,7 @@ CONFIG_DYNAMIC_DEBUG=y
 CONFIG_EARLY_PRINTK=y
 CONFIG_EMBEDDED=y
 CONFIG_ESD_FS=y
+CONFIG_EXFAT_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS_SECURITY=y
