defconfig: Enable per-process reclaim feature
Enable per process reclaim feature to reclaim pages directly from
a process and increase swap utilization.

--- a/arch/arm/configs/msm8916-lux_defconfig
+++ b/arch/arm/configs/msm8916-lux_defconfig
@@ -444,6 +444,7 @@ CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRINTK_TIME=y
 CONFIG_PROC_DEVICETREE=y
+CONFIG_PROCESS_RECLAIM=y
 CONFIG_PROFILING=y
 CONFIG_PRONTO_WLAN=m
 CONFIG_PSTORE_CONSOLE=y
