defconfig: Enable scheduler guided frequency feature for 8939
With this feature enabled, the cpufreq governor gets the CPU load
from the scheduler. This helps in running the destination CPU at
an appropriate frequency during the task migrations.

--- a/arch/arm/configs/msm8916-lux_defconfig
+++ b/arch/arm/configs/msm8916-lux_defconfig
@@ -494,6 +494,7 @@ CONFIG_RMNET_DATA=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_QPNP=y
 CONFIG_RT_GROUP_SCHED=y
+CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_SCHED_HMP=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHEDSTATS=y
